@@ -1,3 +1,5 @@
+- Bug Fix: Fix calculation of registration tuition including other events for the same degree and execution interval, but excluding standalone and extracurricular tuitions [#qubIT-Fenix-6109]
+
 12.0.0 (25-10-2024)
 - New feature: Finantial document series by finantial entity [#qubIT-Fenix-5456]
 
